--- a/src/pages/[lang]/menu.astro
+++ b/src/pages/[lang]/menu.astro
@@ -6,6 +6,7 @@ import Footer from '../../components/Footer.astro'
 import Section from '../../components/Section.astro'
 import FixedBackground from '../../components/FixedBackground.astro'
 import BackgroundOverlay from '../../components/BackgroundOverlay.astro'
+import Analytics from '../../components/Analytics.astro'
 import { getTranslations, useTranslations, languages } from '../../i18n/utils.js'
 import { getLocalizedMenuData } from '../../data/menu-i18n.ts'
 import type { MenuCategory, MenuItem } from '../../types/menu'
@@ -34,11 +35,14 @@ const menuData = getLocalizedMenuData(lang, translations);
     <title>{t('meta.menuTitle')}</title>
     <meta name="description" content={t('meta.menuDescription')} />
     
+    <!-- Analytics Scripts -->
+    <Analytics />
+
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon.svg`} />
     <link rel="icon" type="image/png" href={`${import.meta.env.BASE_URL}favicon.png`} />
     <link rel="apple-touch-icon" href={`${import.meta.env.BASE_URL}apple-touch-icon.png`} />
-    
+
     <!-- Visitor tracking -->
     <script>
       // Send visitor data to Google Sheets
