--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ interface Props {
   translations?: any;
 }
 
-const { lang = 'en', translations } = Astro.props;
+const { lang = 'sq', translations } = Astro.props;
 
 // Get translation function
 function t(key) {
