--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ interface Props {
   useFixedBackground?: boolean;
 }
 
-const { title, subtitle, backgroundImage, showButtons = false, lang = 'en', translations, useFixedBackground = false } = Astro.props;
+const { title, subtitle, backgroundImage, showButtons = false, lang = 'sq', translations, useFixedBackground = false } = Astro.props;
 
 // Get translation function
 function t(key: string): string {
