--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import BackgroundOverlay from '../components/BackgroundOverlay.astro'
 import Analytics from '../components/Analytics.astro'
 import { getTranslations, useTranslations } from '../i18n/utils.ts'
 
-const lang = 'en'
+const lang = 'sq'
 const translations = await getTranslations(lang)
 const t = useTranslations(translations)
 
