--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -11,8 +11,8 @@ import { getTranslations, useTranslations } from '../i18n/utils.js'
 import { getLocalizedMenuData } from '../data/menu-i18n.ts'
 import type { MenuCategory, MenuItem } from '../types/menu'
 
-// Default to English for root menu page
-const lang = 'en'
+// Default to Albanian for root menu page
+const lang = 'sq'
 const translations = await getTranslations(lang)
 const t = useTranslations(translations)
 
